# pyme-agent

./: .env.example  README.md  memory.json  pyme.db  pyproject.toml  setup_db.py
src/: agency_agent.py  mcp_server.py
src/agent/: config.py  graph.py  memory.json  state.py
tests/: test_accuracy_llm_as_judge.py
